# FastApi-jaspelku

./: .gitignore  alembic.ini  k.py  main.py  pyproject.toml
alembic/: env.py
docs/: api.spec.json
src/auth/: adminAuthCookie.py  createTokenAdmin.py  createTokenUser.py  refreshTokenAdmin.py  userAuthDepends.py
src/auth/dependAuthMiddleware/: adminAuthCookie.py  getUserDepends.py  refreshTokenAdmin.py  refreshTokenUser.py  servantAuth.py  userAuthDepends.py  vendeeAuth.py
src/db/: database.py
src/domain/admin/auth/: authModels.py  authService.py
src/domain/admin/pesananOrderManagement/: pesananOrderManagementModel.py  (+1 more)
src/domain/auth/: authModel.py  authService.py
src/domain/chat/: chatModel.py  chatService.py
src/domain/generalUser/: userModel.py  userService.py
src/domain/models_domain/: notifikasiModel.py  pesananOrderModel.py  servantModel.py  userModel.py  vendeeModel.py
src/domain/servant/: servantModel.py  servantService.py
src/domain/vendee/: vendeeModel.py  vendeeService.py
src/error/: errorHandling.py
src/models/: __init__.py  chatModel.py  developerModels.py  notifikasiModel.py  pesananModel.py  ratingModel.py  responseModel.py  servantModel.py  userModel.py  vendeeModel.py
src/routes/: adminRouter.py  authRouter.py  chatRouter.py  generalUserEndpoint.py  servantRouter.py  userRouter.py  vendeeRouter.py
src/socket/: socket.py  socketErrorHandling.py  socketHearBeat.py  socketSendNotification.py  socket_auth_middleware.py
src/utils/: BaseModelWithPhone.py  phoneNumberValidation.py  sendOtp.py  sessionDepedency.py
(+6 files in other folders)
